# PDMS

./: -- Install dependencies  01_LoadPDFs.py  README.md  config.ini  ingest_pdfs.py  main.py  pyproject.toml
.env/: pyvenv.cfg
data/output/01_partitioned/: Millennium Li_33001HL.OP24.7L_1.2.2024.pdf.json
data/output/04_markdown/: Millennium Li_33001HL.OP24.7L_1.2.2024.pdf.md
data/output/temp/chunk/: 8a866f71ea3a.json
data/output/temp/index/: 6270ac09f9ad.json  89c91043b38b.json
data/output/temp/partition/: 069f746a64fd.json  787b6ca6d22e.json
helpers/: __init__.py  display.py  enrichments.py  generate_markdown.py  llm_summaries.py  markdown_converter.py  markdown_processor.py  pdf_box_plotting.py  pdf_ingest.py
