[tool.poetry]
name = "advanced rag ingest"
version = "0.9"
description = "A powerful Python application for processing PDF files, extracting annotations, and generating structured output. This tool is designed to handle batch processing of PDF documents while maintaining detailed logging and providing user-friendly command-line interactions."
authors = ["Tiran Dagan <tiran@tirandagan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
rich = "^13.9.3"
pymupdf = "^1.24.13"
matplotlib = "^3.9.2"
openai = "^1.52.2"
unstructured = "^0.16.3"
markdown = "^3.7"
unstructured-ingest = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
